// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="MuiGrid-container-1 MuiGrid-spacing-xs-32-26"
>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-4-47 MuiGrid-grid-md-4-61 MuiGrid-grid-lg-3-74 MuiGrid-grid-xl-2-87"
  >
    <div
      editPath="/suppliers/1234/avatar"
      imageUrl="/foo/url"
      name="foo-name"
    >
      Avatar
    </div>
    <h4
      className="MuiTypography-root-98 MuiTypography-h4-113"
      style={
        Object {
          "marginBottom": 16,
          "marginTop": 16,
        }
      }
    >
      foo-name
    </h4>
    <div
      style={
        Object {
          "marginRight": "5px",
          "textDecoration": "none",
        }
      }
      to="/suppliers/1234/edit"
    >
      <button
        className="MuiButtonBase-root-159 MuiButton-root-133 MuiButton-contained-144 MuiButton-containedPrimary-145 MuiButton-raised-147 MuiButton-raisedPrimary-148"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-134"
        >
          Editar perfil
        </span>
        <span
          className="MuiTouchRipple-root-191"
        />
      </button>
    </div>
    <div
      style={
        Object {
          "textDecoration": "none",
        }
      }
      to="/suppliers/1234/questionnaires"
    >
      <button
        className="MuiButtonBase-root-159 MuiButton-root-133 MuiButton-contained-144 MuiButton-containedPrimary-145 MuiButton-raised-147 MuiButton-raisedPrimary-148"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "marginTop": 10,
          }
        }
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-134"
        >
          Responder questionários
        </span>
        <span
          className="MuiTouchRipple-root-191"
        />
      </button>
    </div>
  </div>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-8-51 MuiGrid-grid-md-8-65 MuiGrid-grid-lg-9-80 MuiGrid-grid-xl-10-95"
  >
    <div
      className="MuiPaper-root-163 MuiPaper-elevation1-166 MuiPaper-rounded-164 MuiCard-root-162"
    >
      <div
        className="MuiCardContent-root-190"
      >
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
        >
          <h6
            className="MuiTypography-root-98 MuiTypography-h6-115"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            Descrição
            :
          </h6>
           
          <h6
            className="MuiTypography-root-98 MuiTypography-subtitle1-116"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            foo-description
          </h6>
        </div>
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
        >
          <h6
            className="MuiTypography-root-98 MuiTypography-h6-115"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            Telefone
            :
          </h6>
           
          <h6
            className="MuiTypography-root-98 MuiTypography-subtitle1-116"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            0000-0000
          </h6>
        </div>
        <div
          style={
            Object {
              "textDecoration": "none",
            }
          }
          to="/suppliers/1234/messages/new"
        >
          <button
            className="MuiButtonBase-root-159 MuiButton-root-133 MuiButton-contained-144 MuiButton-containedPrimary-145 MuiButton-raised-147 MuiButton-raisedPrimary-148"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "marginTop": 16,
              }
            }
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-134"
            >
              Enviar mensagem
            </span>
            <span
              className="MuiTouchRipple-root-191"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-41"
  >
    <h5
      className="MuiTypography-root-98 MuiTypography-h5-114 MuiTypography-colorTextSecondary-131"
      style={
        Object {
          "display": "inline-block",
          "marginBottom": 32,
        }
      }
    >
      Materiais
    </h5>
    <div
      style={
        Object {
          "display": "inline-block",
          "float": "right",
          "textDecoration": "none",
        }
      }
      to="/suppliers/1234/materials/new"
    >
      <button
        className="MuiButtonBase-root-159 MuiButton-root-133 MuiButton-contained-144 MuiButton-containedPrimary-145 MuiButton-raised-147 MuiButton-raisedPrimary-148"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-134"
        >
          Cadastrar material
        </span>
        <span
          className="MuiTouchRipple-root-191"
        />
      </button>
    </div>
  </div>
  <div
    current={
      Object {
        "description": "foo-description",
        "id": 1234,
        "imageUrl": "/foo/url",
        "name": "foo-name",
        "phone": "0000-0000",
        "userId": 1234,
      }
    }
    currentUser={
      Object {
        "id": 1234,
        "suppliers": Array [
          Object {
            "id": 1234,
          },
        ],
      }
    }
    id={1234}
    location={
      Object {
        "pathname": "/foo",
      }
    }
    supplier={
      Object {
        "description": "foo-description",
        "id": 1234,
        "imageUrl": "/foo/url",
        "name": "foo-name",
        "phone": "0000-0000",
        "userId": 1234,
      }
    }
  >
    Addresses
  </div>
</div>
`;

exports[`with materials renders correctly 1`] = `
<div
  className="MuiGrid-container-1 MuiGrid-spacing-xs-32-26"
>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-4-47 MuiGrid-grid-md-4-61 MuiGrid-grid-lg-3-74 MuiGrid-grid-xl-2-87"
  >
    <div
      editPath=""
      imageUrl="/foo/url"
      name="foo-name"
    >
      Avatar
    </div>
    <h4
      className="MuiTypography-root-98 MuiTypography-h4-113"
      style={
        Object {
          "marginBottom": 16,
          "marginTop": 16,
        }
      }
    >
      foo-name
    </h4>
    <div
      style={
        Object {
          "textDecoration": "none",
        }
      }
      to="/suppliers/1234/questionnaires"
    >
      <button
        className="MuiButtonBase-root-159 MuiButton-root-133 MuiButton-contained-144 MuiButton-containedPrimary-145 MuiButton-raised-147 MuiButton-raisedPrimary-148"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "marginTop": 10,
          }
        }
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-134"
        >
          Ver questionários
        </span>
        <span
          className="MuiTouchRipple-root-191"
        />
      </button>
    </div>
  </div>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-8-51 MuiGrid-grid-md-8-65 MuiGrid-grid-lg-9-80 MuiGrid-grid-xl-10-95"
  >
    <div
      className="MuiPaper-root-163 MuiPaper-elevation1-166 MuiPaper-rounded-164 MuiCard-root-162"
    >
      <div
        className="MuiCardContent-root-190"
      >
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
        >
          <h6
            className="MuiTypography-root-98 MuiTypography-h6-115"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            Descrição
            :
          </h6>
           
          <h6
            className="MuiTypography-root-98 MuiTypography-subtitle1-116"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            foo-description
          </h6>
        </div>
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
        >
          <p
            className="MuiTypography-root-98 MuiTypography-body1-107 MuiTypography-colorInherit-127"
          >
            <div
              style={
                Object {
                  "textDecoration": "none",
                }
              }
              to={
                Object {
                  "pathname": "/auth/sign-up",
                  "state": Object {
                    "referrer": "/foo",
                  },
                }
              }
            >
              Cadastre-se
            </div>
             
            <span>
              para ver o contato do fornecedor.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-41"
  >
    <h5
      className="MuiTypography-root-98 MuiTypography-h5-114 MuiTypography-colorTextSecondary-131"
      style={
        Object {
          "display": "inline-block",
          "marginBottom": 32,
        }
      }
    >
      Materiais
    </h5>
    <div
      cellheight={360}
      className="MuiGrid-container-1 MuiGrid-spacing-xs-8-23"
    />
  </div>
  <div
    current={
      Object {
        "description": "foo-description",
        "id": 1234,
        "imageUrl": "/foo/url",
        "materials": Array [
          Object {
            "id": 1,
          },
          Object {
            "id": 2,
          },
          Object {
            "id": 3,
          },
        ],
        "name": "foo-name",
        "phone": "0000-0000",
        "userId": 1234,
      }
    }
    id={1234}
    location={
      Object {
        "pathname": "/foo",
      }
    }
    supplier={
      Object {
        "description": "foo-description",
        "id": 1234,
        "imageUrl": "/foo/url",
        "materials": Array [
          Object {
            "id": 1,
          },
          Object {
            "id": 2,
          },
          Object {
            "id": 3,
          },
        ],
        "name": "foo-name",
        "phone": "0000-0000",
        "userId": 1234,
      }
    }
  >
    Addresses
  </div>
</div>
`;

exports[`without currentUser renders correctly 1`] = `
<div
  className="MuiGrid-container-1 MuiGrid-spacing-xs-32-26"
>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-4-47 MuiGrid-grid-md-4-61 MuiGrid-grid-lg-3-74 MuiGrid-grid-xl-2-87"
  >
    <div
      editPath=""
      imageUrl="/foo/url"
      name="foo-name"
    >
      Avatar
    </div>
    <h4
      className="MuiTypography-root-98 MuiTypography-h4-113"
      style={
        Object {
          "marginBottom": 16,
          "marginTop": 16,
        }
      }
    >
      foo-name
    </h4>
    <div
      style={
        Object {
          "textDecoration": "none",
        }
      }
      to="/suppliers/1234/questionnaires"
    >
      <button
        className="MuiButtonBase-root-159 MuiButton-root-133 MuiButton-contained-144 MuiButton-containedPrimary-145 MuiButton-raised-147 MuiButton-raisedPrimary-148"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "marginTop": 10,
          }
        }
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-134"
        >
          Ver questionários
        </span>
        <span
          className="MuiTouchRipple-root-191"
        />
      </button>
    </div>
  </div>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-8-51 MuiGrid-grid-md-8-65 MuiGrid-grid-lg-9-80 MuiGrid-grid-xl-10-95"
  >
    <div
      className="MuiPaper-root-163 MuiPaper-elevation1-166 MuiPaper-rounded-164 MuiCard-root-162"
    >
      <div
        className="MuiCardContent-root-190"
      >
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
        >
          <h6
            className="MuiTypography-root-98 MuiTypography-h6-115"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            Descrição
            :
          </h6>
           
          <h6
            className="MuiTypography-root-98 MuiTypography-subtitle1-116"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            foo-description
          </h6>
        </div>
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
        >
          <p
            className="MuiTypography-root-98 MuiTypography-body1-107 MuiTypography-colorInherit-127"
          >
            <div
              style={
                Object {
                  "textDecoration": "none",
                }
              }
              to={
                Object {
                  "pathname": "/auth/sign-up",
                  "state": Object {
                    "referrer": "/foo",
                  },
                }
              }
            >
              Cadastre-se
            </div>
             
            <span>
              para ver o contato do fornecedor.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-41"
  />
  <div
    current={
      Object {
        "description": "foo-description",
        "id": 1234,
        "imageUrl": "/foo/url",
        "name": "foo-name",
        "phone": "0000-0000",
        "userId": 1234,
      }
    }
    id={1234}
    location={
      Object {
        "pathname": "/foo",
      }
    }
    supplier={
      Object {
        "description": "foo-description",
        "id": 1234,
        "imageUrl": "/foo/url",
        "name": "foo-name",
        "phone": "0000-0000",
        "userId": 1234,
      }
    }
  >
    Addresses
  </div>
</div>
`;
